--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Consulta CEP</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
-    <h1>Consulta CEP</h1>
-    <form method="POST">
-        <div class="result">
-            <p><input type="text" class="form-control" id="CEP" name="CEP" placeholder="Numero do CEP"></p>
-            <p><input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Rua"></p>
-            <p><input type="text" class="form-control" id="bairro" name="bairro" placeholder="bairro"></p>
-            <p><input type="text" class="form-control" id="Cidade" name="Cidade" placeholder="Cidade"></p>
-            <p><input type="text" class="form-control" id="Estado" name="Estado" placeholder="Estado"></p>
-            <button type="submit">Buscar</button>
-        </div>
-    </form>
-</div>
+        <h2>Consulta de CEP</h2>
+        <form id="cepForm">
+            <label for="cep">CEP:</label>
+            <input type="text" id="cep" name="cep" placeholder="Digite o CEP" maxlength="9" required>
+            
+            <button type="button" id="buscarCepBtn">Buscar CEP</button> <!-- Botão para buscar o CEP -->
+
+            <label for="logradouro">Endereço:</label>
+            <input type="text" id="logradouro" name="logradouro" readonly>
+
+            <label for="bairro">Bairro:</label>
+            <input type="text" id="bairro" name="bairro" readonly>
+
+            <label for="cidade">Cidade:</label>
+            <input type="text" id="cidade" name="cidade" readonly>
+
+            <label for="estado">Estado:</label>
+            <input type="text" id="estado" name="estado" readonly>
+        </form>
+    </div>
 </body>
-</head>
-<script src="./main.js"></script>
 </html>
+
