--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <input id="logradouroBusca" placeholder="Logradouro">
 
 <button id="buscarEnderecoBtn">Buscar Endereço</button>
-
+<button id="limparBtn" style="display:none;">Limpar</button>
 <ul id="listaResultados"></ul>
         
     </div>
