--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <h2>Consulta de CEP</h2>
         <input id="estadoBusca" placeholder="UF (ex: SP)">
-<input id="cidadeBusca" placeholder="Cidade">
+        <input id="cidadeBusca" placeholder="Cidade" size="30">
 <input id="logradouroBusca" placeholder="Logradouro">
 
 <button id="buscarEnderecoBtn">Buscar Endereço</button>
-<button id="limparBtn" style="display:none;">Limpar</button>
+<button id="limparBtn">Limpar</button>
 <ul id="listaResultados"></ul>
         
     </div>
